[tool.poetry]
name = "loadtesting"
version = "0.1.0"
description = ""
authors = ["Bodan1992 <bodan1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
